r2/r2/public/static/css/reddit.css
/* ... */
.usage-table .intersection span {
    padding: 1px 3px 0 2px;
}

.usage-table .empty.intersection {
    text-align: center;
    color: #ccc;
}

.usage-table .elapsed.intersection {
    color: black;
}

.usage-table .count.intersection {
    color: black;
}

.usage-table .average.intersection {
    color: black;
    border-right: solid #cdcdcd 1px;
}

.usage-table .empty.intersection, .usage-table .average.intersection {
    padding-left: 0;
    margin-left: 0;
    border-right: solid #cdcdcd 1px;
    padding-right: 5px;
}

a.pretty-button:hover { text-decoration: none !important }

.pretty-button {
    margin-left: 5px;
    margin-bottom: 5px;

    border: 1px solid #666;
    padding: 1px 6px;
    background: white none repeat-x scroll center left;

    color: #111;
    font-size: 10px;
    font-weight: normal;

    line-height: 20px;
    border-radius: 3px;
    outline-style: none;
}

a.pretty-button {
    color: black;
}

a.pretty-button.pressed {
    color: white;
}

a.pretty-button.negative {
    background-image: url(../bg-button-negative-unpressed.png); /* SPRITE stretch-x */
}

a.pretty-button.negative.pressed {
    background-image: url(../bg-button-negative-pressed.png); /* SPRITE stretch-x */
}

a.pretty-button.neutral {
    background-image: url(../bg-button-neutral-unpressed.png); /* SPRITE stretch-x */
}

a.pretty-button.neutral.pressed {
    background-image: url(../bg-button-neutral-pressed.png); /* SPRITE stretch-x */
}

a.pretty-button.positive {
    background-image: url(../bg-button-positive-unpressed.png); /* SPRITE stretch-x */
}

a.pretty-button.positive.pressed {
    background-image: url(../bg-button-positive-pressed.png); /* SPRITE stretch-x */
}

.oatmeal img { 
    display: block;
    margin: 5px auto; 
}

.gold-thanks.gold-accent {
    font-size: small;
    margin: 35px auto 0;
    padding: 20px;
    width: 600px;
    position: relative;
    display: block;
    border-radius: 3px;
}

.gold-thanks p { margin: 15px 0; text-align: center; }
.gold-thanks .lounge-msg p { font-size: medium; }
.gold-thanks .fancy-snoo img {
    margin: 10px auto;
    position: relative;
    display: block;
}

.gold-accent {
    margin-top: 10px;
    padding: 0 10px 5px;
    background-color: #fffdcc;
    border: solid 1px #e1b000;
    color: #9a7d2e;
    display: inline-block;
}

tr.gold-accent { 
    display: table-row; 
    border-radius: 3px;
}

tr.gold-accent + tr > td { 
    padding-top: 10px; 
}

#per-sr-karma {
    width: 300px;
    margin: .6em auto 0 auto;
    table-layout: fixed;
}

#per-sr-karma thead th,
#per-sr-karma td {
    text-align: right;
}

#per-sr-karma tbody th {
    text-align: left;
}

#per-sr-karma #sr-karma-header {
    width: 150px;
    text-align: left;
}

#per-sr-karma thead th {
    font-weight: bold;
    padding-bottom: 2px;
}

#per-sr-karma tbody th {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    -o-text-overflow: ellipsis;
}

#per-sr-karma tbody td {
    font-weight: bold;
    color: #666;
}

#per-sr-karma th.helpful span {
    border-bottom: 1px dotted #666;
    cursor: help;
    display: inline-block;
}

.more-karmas {
    display: none;
}

.giftgold.karma-breakdown {
    margin-top: .6em;
}

.friend-note button[type=submit] { 
    display: none; 
    font-size: x-small;
    padding-top: 1px;
    padding-bottom: 1px; 
    margin: 0px;
    margin-left: 5px;
    width: 45px;
}
.friend-note.edited button[type=submit] { display: inline-block; }
.friend-note.edited input[type=text] { width: 250px; margin-right: 0px; }


.gold-accent h1,
.gold-accent th {
    color: #6a4d00;
    font-family: "Hoefler Text","Palatino Linotype","Book Antiqua",
                  Palatino,georgia,garamond,FreeSerif,serif;
    font-variant: small-caps;
}

.gold-accent .pretty-form input[type=text] {
    margin-top: 1px;
    margin-bottom: 2px;
    margin-left: 0;  /* or else friends with benefits'
                        "note" td and th don't line up */
}

.gold-accent .pretty-form input[type=text]#name {
    border-radius: 3px;
}

.gold-accent .pretty-form button {
    background-color: #fff088;
    color: #6a4d00;
    border: 1px solid #9a7d2e;
    border-radius: 3px;
}

.gold-expiration-info {
    margin: 3px 0;
    width: 278px;
    text-align: center;
}

.gold-expiration-info .karma {
    color: #583800;
}

.giftgold {
    margin-bottom: 5px;
}
.giftgold a {
    color: #9a7d2e;
    font-weight: bold;
}
.giftgold a:before,
.gold-form h1.goldgift:before {
    background-image: url(../giftgold.png); /* SPRITE */
}

.gold-form p:first-child {
    margin: 0 0 8px 0;
}

.tiny {
    font-size: xx-small;
}

.gold-accent.comment-visits-box {
    color: #583800;
    margin: 0px 5px 15px;
    padding: 7px 10px 7px 7px;
    max-width: 550px;
}

.gold-form {
    font-family: "Hoefler Text","Palatino Linotype","Book Antiqua", Palatino,georgia,garamond,FreeSerif,serif;
    min-height: 600px;
    line-height: 22px;
}

.gold-form .roundfield {
    border: 1px solid #E1B000;
    background-color: #fffdcc;
    color: #6a4d00;
}

.gold-form .note {
    font-size: 11px;
    font-style: italic;
    color: #222;
    margin-top: 7px;
}

.gold-form .spacer {
    margin-top: 20px !important;
}

.gold-subsection {
    display: none;
    position: absolute;
}

.gold-form.cloneable {
    display: none;
}

.gold-form textarea, .gold-form input[type=text] {
    margin-top: 3px;
}

.gold-payment form {
    display: inline;
}

.gold-logo {
    float: left;
    margin: 5px 0;
}

.comment .gold-form {
    margin: 0 0 10px 4px;
    min-height: 0;
}

.gold-payment .roundfield-content {
    margin-left: 80px;
}

.gold-payment .close-button {
    width: 13px;
    height: 13px;
    float: right;
    margin: 6px 4px 6px 8px;
    border: none;
    background: url(../close.png) no-repeat;  /* SPRITE */
    text-indent: -9999px;
    opacity: .25;
}

.gold-payment .close-button:hover {
    opacity: .55;
}
/* ... */

